[gd_scene load_steps=16 format=3 uid="uid://dwgjpyfb61q27"]

[ext_resource type="Script" path="res://Roteiros/Objetos/Bigorna/anvil.gd" id="1_5odmv"]
[ext_resource type="Resource" uid="uid://cpx4nixq0asen" path="res://Roteiros/Recursos_Objetos/ObjClassManeger.tres" id="2_7rwsh"]
[ext_resource type="Texture2D" uid="uid://bs78r5v4aft7d" path="res://Importados/Bigorna/textures/Anvil_baseColor.png" id="3_rktv4"]
[ext_resource type="AudioStream" uid="uid://bl1ljmj0uoqh4" path="res://Audios/BigornaCraft/bing1-91919.mp3" id="4_4phc8"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_onkn2"]
friction = 0.4
rough = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8bbhb"]
resource_name = "Anvil"
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("3_rktv4")
emission_enabled = true
emission_texture = ExtResource("3_rktv4")
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_e75dr"]
_surfaces = [{
"aabb": AABB(0, -0.65625, 0, 0.75001, 0.5625, 0.75001),
"format": 4097,
"index_count": 126,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 3, 0, 4, 0, 2, 0, 3, 0, 5, 0, 4, 0, 6, 0, 2, 0, 4, 0, 6, 0, 1, 0, 2, 0, 7, 0, 4, 0, 5, 0, 7, 0, 6, 0, 4, 0, 6, 0, 0, 0, 1, 0, 6, 0, 7, 0, 0, 0, 7, 0, 3, 0, 0, 0, 7, 0, 5, 0, 3, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 10, 0, 13, 0, 12, 0, 9, 0, 10, 0, 14, 0, 13, 0, 15, 0, 14, 0, 12, 0, 13, 0, 14, 0, 11, 0, 8, 0, 14, 0, 15, 0, 11, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 18, 0, 21, 0, 20, 0, 17, 0, 18, 0, 22, 0, 21, 0, 23, 0, 22, 0, 20, 0, 21, 0, 20, 0, 16, 0, 17, 0, 20, 0, 22, 0, 16, 0, 22, 0, 19, 0, 16, 0, 22, 0, 23, 0, 19, 0, 24, 0, 26, 0, 25, 0, 24, 0, 27, 0, 26, 0, 27, 0, 28, 0, 26, 0, 27, 0, 29, 0, 28, 0, 30, 0, 26, 0, 28, 0, 30, 0, 25, 0, 26, 0, 31, 0, 28, 0, 29, 0, 31, 0, 30, 0, 28, 0, 30, 0, 24, 0, 25, 0, 30, 0, 31, 0, 24, 0, 31, 0, 27, 0, 24, 0, 31, 0, 29, 0, 27, 0),
"name": "Anvil",
"primitive": 3,
"vertex_count": 32,
"vertex_data": PackedByteArray(0, 0, 64, 63, 0, 0, 28, 191, 0, 0, 64, 63, 0, 0, 0, 0, 0, 0, 28, 191, 0, 0, 64, 63, 0, 0, 0, 0, 0, 0, 28, 191, 0, 0, 240, 62, 0, 0, 64, 63, 0, 0, 28, 191, 0, 0, 240, 62, 0, 0, 0, 0, 0, 0, 16, 190, 0, 0, 240, 62, 0, 0, 64, 63, 0, 0, 16, 190, 0, 0, 240, 62, 0, 0, 0, 0, 0, 0, 16, 190, 0, 0, 64, 63, 0, 0, 64, 63, 0, 0, 16, 190, 0, 0, 64, 63, 0, 0, 16, 63, 0, 0, 240, 190, 0, 0, 240, 62, 0, 0, 64, 62, 0, 0, 240, 190, 0, 0, 240, 62, 0, 0, 64, 62, 0, 0, 240, 190, 0, 0, 112, 62, 0, 0, 16, 63, 0, 0, 240, 190, 0, 0, 112, 62, 0, 0, 64, 62, 0, 0, 144, 190, 0, 0, 240, 62, 0, 0, 64, 62, 0, 0, 144, 190, 0, 0, 112, 62, 0, 0, 16, 63, 0, 0, 144, 190, 0, 0, 240, 62, 0, 0, 16, 63, 0, 0, 144, 190, 0, 0, 112, 62, 0, 0, 28, 63, 0, 0, 16, 191, 0, 0, 112, 62, 0, 0, 16, 62, 0, 0, 16, 191, 0, 0, 112, 62, 0, 0, 16, 62, 0, 0, 16, 191, 0, 0, 64, 62, 0, 0, 28, 63, 0, 0, 16, 191, 0, 0, 64, 62, 0, 0, 16, 62, 0, 0, 64, 190, 0, 0, 112, 62, 0, 0, 16, 62, 0, 0, 64, 190, 0, 0, 64, 62, 0, 0, 28, 63, 0, 0, 64, 190, 0, 0, 112, 62, 0, 0, 28, 63, 0, 0, 64, 190, 0, 0, 64, 62, 0, 0, 40, 63, 0, 0, 40, 191, 0, 0, 64, 62, 0, 0, 192, 61, 0, 0, 40, 191, 0, 0, 64, 62, 0, 0, 192, 61, 0, 0, 40, 191, 0, 0, 0, 0, 0, 0, 40, 63, 0, 0, 40, 191, 0, 0, 0, 0, 0, 0, 192, 61, 0, 0, 192, 189, 0, 0, 0, 0, 0, 0, 40, 63, 0, 0, 192, 189, 0, 0, 0, 0, 0, 0, 192, 61, 0, 0, 192, 189, 0, 0, 64, 62, 0, 0, 40, 63, 0, 0, 192, 189, 0, 0, 64, 62)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_fsdxx"]
resource_name = "Sketchfab_Scene_Object_0"
_surfaces = [{
"aabb": AABB(0, -0.65625, 0, 0.75001, 0.5625, 0.75001),
"attribute_data": PackedByteArray(0, 192, 87, 63, 0, 64, 114, 63, 0, 192, 83, 63, 0, 64, 114, 63, 0, 192, 83, 63, 0, 192, 112, 63, 0, 192, 87, 63, 0, 192, 112, 63, 0, 128, 84, 63, 0, 64, 110, 63, 0, 128, 84, 63, 0, 64, 114, 63, 0, 0, 87, 63, 0, 64, 114, 63, 0, 0, 87, 63, 0, 64, 110, 63, 0, 128, 84, 63, 0, 64, 114, 63, 0, 128, 84, 63, 0, 192, 112, 63, 0, 0, 87, 63, 0, 192, 112, 63, 0, 0, 87, 63, 0, 64, 114, 63, 0, 192, 83, 63, 0, 64, 114, 63, 0, 192, 83, 63, 0, 192, 112, 63, 0, 192, 87, 63, 0, 192, 112, 63, 0, 192, 87, 63, 0, 64, 114, 63, 0, 0, 12, 62, 0, 192, 109, 63, 0, 0, 2, 62, 0, 192, 109, 63, 0, 0, 2, 62, 0, 192, 105, 63, 0, 0, 12, 62, 0, 192, 105, 63, 0, 0, 87, 63, 0, 64, 114, 63, 0, 128, 84, 63, 0, 64, 114, 63, 0, 128, 84, 63, 0, 192, 112, 63, 0, 0, 87, 63, 0, 192, 112, 63, 0, 192, 86, 63, 0, 192, 112, 63, 0, 192, 84, 63, 0, 192, 112, 63, 0, 192, 84, 63, 0, 128, 111, 63, 0, 192, 86, 63, 0, 128, 111, 63, 0, 64, 85, 63, 0, 192, 112, 63, 0, 64, 85, 63, 0, 128, 111, 63, 0, 64, 86, 63, 0, 128, 111, 63, 0, 64, 86, 63, 0, 192, 112, 63, 0, 192, 84, 63, 0, 192, 112, 63, 0, 192, 84, 63, 0, 128, 111, 63, 0, 192, 86, 63, 0, 128, 111, 63, 0, 192, 86, 63, 0, 192, 112, 63, 0, 64, 86, 63, 0, 192, 112, 63, 0, 64, 85, 63, 0, 192, 112, 63, 0, 64, 85, 63, 0, 128, 111, 63, 0, 64, 86, 63, 0, 128, 111, 63, 0, 0, 87, 63, 0, 128, 111, 63, 0, 128, 84, 63, 0, 128, 111, 63, 0, 128, 84, 63, 0, 64, 111, 63, 0, 0, 87, 63, 0, 64, 111, 63, 0, 192, 84, 63, 0, 128, 111, 63, 0, 192, 84, 63, 0, 64, 111, 63, 0, 192, 86, 63, 0, 64, 111, 63, 0, 192, 86, 63, 0, 128, 111, 63, 0, 128, 84, 63, 0, 128, 111, 63, 0, 128, 84, 63, 0, 64, 111, 63, 0, 0, 87, 63, 0, 64, 111, 63, 0, 0, 87, 63, 0, 128, 111, 63, 0, 192, 86, 63, 0, 128, 113, 63, 0, 192, 84, 63, 0, 128, 113, 63, 0, 192, 84, 63, 0, 0, 111, 63, 0, 192, 86, 63, 0, 0, 111, 63, 0, 192, 86, 63, 0, 128, 111, 63, 0, 192, 84, 63, 0, 128, 111, 63, 0, 192, 84, 63, 0, 64, 111, 63, 0, 192, 86, 63, 0, 64, 111, 63, 0, 64, 87, 63, 0, 64, 111, 63, 0, 64, 84, 63, 0, 64, 111, 63, 0, 64, 84, 63, 0, 64, 110, 63, 0, 64, 87, 63, 0, 64, 110, 63, 0, 64, 84, 63, 0, 192, 110, 63, 0, 64, 84, 63, 0, 192, 113, 63, 0, 64, 87, 63, 0, 192, 113, 63, 0, 64, 87, 63, 0, 192, 110, 63, 0, 64, 84, 63, 0, 64, 111, 63, 0, 64, 84, 63, 0, 64, 110, 63, 0, 64, 87, 63, 0, 64, 110, 63, 0, 64, 87, 63, 0, 64, 111, 63, 0, 64, 84, 63, 0, 64, 111, 63, 0, 64, 84, 63, 0, 64, 110, 63, 0, 64, 87, 63, 0, 64, 110, 63, 0, 64, 87, 63, 0, 64, 111, 63, 0, 64, 87, 63, 0, 192, 113, 63, 0, 64, 84, 63, 0, 192, 113, 63, 0, 64, 84, 63, 0, 192, 110, 63, 0, 64, 87, 63, 0, 192, 110, 63, 0, 64, 87, 63, 0, 64, 111, 63, 0, 64, 84, 63, 0, 64, 111, 63, 0, 64, 84, 63, 0, 64, 110, 63, 0, 64, 87, 63, 0, 64, 110, 63),
"format": 4119,
"index_count": 126,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 12, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 20, 0, 23, 0, 22, 0, 24, 0, 26, 0, 25, 0, 24, 0, 27, 0, 26, 0, 28, 0, 30, 0, 29, 0, 28, 0, 31, 0, 30, 0, 32, 0, 34, 0, 33, 0, 32, 0, 35, 0, 34, 0, 36, 0, 38, 0, 37, 0, 36, 0, 39, 0, 38, 0, 40, 0, 42, 0, 41, 0, 40, 0, 43, 0, 42, 0, 44, 0, 46, 0, 45, 0, 44, 0, 47, 0, 46, 0, 48, 0, 50, 0, 49, 0, 48, 0, 51, 0, 50, 0, 52, 0, 54, 0, 53, 0, 52, 0, 55, 0, 54, 0, 56, 0, 58, 0, 57, 0, 56, 0, 59, 0, 58, 0, 60, 0, 62, 0, 61, 0, 60, 0, 63, 0, 62, 0, 64, 0, 66, 0, 65, 0, 64, 0, 67, 0, 66, 0, 68, 0, 70, 0, 69, 0, 68, 0, 71, 0, 70, 0, 72, 0, 74, 0, 73, 0, 72, 0, 75, 0, 74, 0, 76, 0, 78, 0, 77, 0, 76, 0, 79, 0, 78, 0, 80, 0, 82, 0, 81, 0, 80, 0, 83, 0, 82, 0),
"material": SubResource("StandardMaterial3D_8bbhb"),
"name": "Anvil",
"primitive": 3,
"vertex_count": 84,
"vertex_data": PackedByteArray(0, 0, 64, 63, 0, 0, 28, 191, 0, 0, 64, 63, 255, 127, 0, 0, 255, 255, 255, 63, 0, 0, 0, 0, 0, 0, 28, 191, 0, 0, 64, 63, 255, 127, 0, 0, 255, 255, 255, 63, 0, 0, 0, 0, 0, 0, 28, 191, 0, 0, 240, 62, 255, 127, 0, 0, 255, 255, 255, 63, 0, 0, 64, 63, 0, 0, 28, 191, 0, 0, 240, 62, 255, 127, 0, 0, 255, 255, 255, 63, 0, 0, 64, 63, 0, 0, 28, 191, 0, 0, 240, 62, 255, 255, 255, 255, 255, 127, 255, 255, 0, 0, 0, 0, 0, 0, 28, 191, 0, 0, 240, 62, 255, 255, 255, 255, 255, 127, 255, 255, 0, 0, 0, 0, 0, 0, 16, 190, 0, 0, 240, 62, 255, 255, 255, 255, 255, 127, 255, 255, 0, 0, 64, 63, 0, 0, 16, 190, 0, 0, 240, 62, 255, 255, 255, 255, 255, 127, 255, 255, 0, 0, 0, 0, 0, 0, 16, 190, 0, 0, 64, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 0, 0, 0, 16, 190, 0, 0, 240, 62, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 0, 0, 0, 28, 191, 0, 0, 240, 62, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 0, 0, 0, 28, 191, 0, 0, 64, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 64, 63, 0, 0, 16, 190, 0, 0, 64, 63, 255, 127, 255, 255, 0, 0, 255, 63, 0, 0, 64, 63, 0, 0, 16, 190, 0, 0, 240, 62, 255, 127, 255, 255, 0, 0, 255, 63, 0, 0, 0, 0, 0, 0, 16, 190, 0, 0, 240, 62, 255, 127, 255, 255, 0, 0, 255, 63, 0, 0, 0, 0, 0, 0, 16, 190, 0, 0, 64, 63, 255, 127, 255, 255, 0, 0, 255, 63, 0, 0, 0, 0, 0, 0, 16, 190, 0, 0, 64, 63, 255, 127, 255, 127, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 28, 191, 0, 0, 64, 63, 255, 127, 255, 127, 255, 127, 0, 0, 0, 0, 64, 63, 0, 0, 28, 191, 0, 0, 64, 63, 255, 127, 255, 127, 255, 127, 0, 0, 0, 0, 64, 63, 0, 0, 16, 190, 0, 0, 64, 63, 255, 127, 255, 127, 255, 127, 0, 0, 0, 0, 64, 63, 0, 0, 16, 190, 0, 0, 64, 63, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 64, 63, 0, 0, 28, 191, 0, 0, 64, 63, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 64, 63, 0, 0, 28, 191, 0, 0, 240, 62, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 64, 63, 0, 0, 16, 190, 0, 0, 240, 62, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 16, 63, 0, 0, 240, 190, 0, 0, 240, 62, 255, 127, 0, 0, 255, 255, 255, 63, 0, 0, 64, 62, 0, 0, 240, 190, 0, 0, 240, 62, 255, 127, 0, 0, 255, 255, 255, 63, 0, 0, 64, 62, 0, 0, 240, 190, 0, 0, 112, 62, 255, 127, 0, 0, 255, 255, 255, 63, 0, 0, 16, 63, 0, 0, 240, 190, 0, 0, 112, 62, 255, 127, 0, 0, 255, 255, 255, 63, 0, 0, 64, 62, 0, 0, 144, 190, 0, 0, 240, 62, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 64, 62, 0, 0, 144, 190, 0, 0, 112, 62, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 64, 62, 0, 0, 240, 190, 0, 0, 112, 62, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 64, 62, 0, 0, 240, 190, 0, 0, 240, 62, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 16, 63, 0, 0, 144, 190, 0, 0, 240, 62, 255, 127, 255, 255, 0, 0, 255, 63, 0, 0, 16, 63, 0, 0, 144, 190, 0, 0, 112, 62, 255, 127, 255, 255, 0, 0, 255, 63, 0, 0, 64, 62, 0, 0, 144, 190, 0, 0, 112, 62, 255, 127, 255, 255, 0, 0, 255, 63, 0, 0, 64, 62, 0, 0, 144, 190, 0, 0, 240, 62, 255, 127, 255, 255, 0, 0, 255, 63, 0, 0, 16, 63, 0, 0, 144, 190, 0, 0, 240, 62, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 16, 63, 0, 0, 240, 190, 0, 0, 240, 62, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 16, 63, 0, 0, 240, 190, 0, 0, 112, 62, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 16, 63, 0, 0, 144, 190, 0, 0, 112, 62, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 28, 63, 0, 0, 16, 191, 0, 0, 112, 62, 255, 127, 0, 0, 255, 255, 255, 63, 0, 0, 16, 62, 0, 0, 16, 191, 0, 0, 112, 62, 255, 127, 0, 0, 255, 255, 255, 63, 0, 0, 16, 62, 0, 0, 16, 191, 0, 0, 64, 62, 255, 127, 0, 0, 255, 255, 255, 63, 0, 0, 28, 63, 0, 0, 16, 191, 0, 0, 64, 62, 255, 127, 0, 0, 255, 255, 255, 63, 0, 0, 16, 62, 0, 0, 64, 190, 0, 0, 112, 62, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 16, 62, 0, 0, 64, 190, 0, 0, 64, 62, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 16, 62, 0, 0, 16, 191, 0, 0, 64, 62, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 16, 62, 0, 0, 16, 191, 0, 0, 112, 62, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 28, 63, 0, 0, 64, 190, 0, 0, 112, 62, 255, 127, 255, 255, 0, 0, 255, 63, 0, 0, 28, 63, 0, 0, 64, 190, 0, 0, 64, 62, 255, 127, 255, 255, 0, 0, 255, 63, 0, 0, 16, 62, 0, 0, 64, 190, 0, 0, 64, 62, 255, 127, 255, 255, 0, 0, 255, 63, 0, 0, 16, 62, 0, 0, 64, 190, 0, 0, 112, 62, 255, 127, 255, 255, 0, 0, 255, 63, 0, 0, 16, 62, 0, 0, 64, 190, 0, 0, 112, 62, 255, 127, 255, 127, 255, 127, 0, 0, 0, 0, 16, 62, 0, 0, 16, 191, 0, 0, 112, 62, 255, 127, 255, 127, 255, 127, 0, 0, 0, 0, 28, 63, 0, 0, 16, 191, 0, 0, 112, 62, 255, 127, 255, 127, 255, 127, 0, 0, 0, 0, 28, 63, 0, 0, 64, 190, 0, 0, 112, 62, 255, 127, 255, 127, 255, 127, 0, 0, 0, 0, 28, 63, 0, 0, 64, 190, 0, 0, 112, 62, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 28, 63, 0, 0, 16, 191, 0, 0, 112, 62, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 28, 63, 0, 0, 16, 191, 0, 0, 64, 62, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 28, 63, 0, 0, 64, 190, 0, 0, 64, 62, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 40, 63, 0, 0, 40, 191, 0, 0, 64, 62, 255, 127, 0, 0, 255, 255, 255, 63, 0, 0, 192, 61, 0, 0, 40, 191, 0, 0, 64, 62, 255, 127, 0, 0, 255, 255, 255, 63, 0, 0, 192, 61, 0, 0, 40, 191, 0, 0, 0, 0, 255, 127, 0, 0, 255, 255, 255, 63, 0, 0, 40, 63, 0, 0, 40, 191, 0, 0, 0, 0, 255, 127, 0, 0, 255, 255, 255, 63, 0, 0, 40, 63, 0, 0, 40, 191, 0, 0, 0, 0, 255, 255, 255, 255, 255, 127, 255, 255, 0, 0, 192, 61, 0, 0, 40, 191, 0, 0, 0, 0, 255, 255, 255, 255, 255, 127, 255, 255, 0, 0, 192, 61, 0, 0, 192, 189, 0, 0, 0, 0, 255, 255, 255, 255, 255, 127, 255, 255, 0, 0, 40, 63, 0, 0, 192, 189, 0, 0, 0, 0, 255, 255, 255, 255, 255, 127, 255, 255, 0, 0, 192, 61, 0, 0, 192, 189, 0, 0, 64, 62, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 192, 61, 0, 0, 192, 189, 0, 0, 0, 0, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 192, 61, 0, 0, 40, 191, 0, 0, 0, 0, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 192, 61, 0, 0, 40, 191, 0, 0, 64, 62, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 40, 63, 0, 0, 192, 189, 0, 0, 64, 62, 255, 127, 255, 255, 0, 0, 255, 63, 0, 0, 40, 63, 0, 0, 192, 189, 0, 0, 0, 0, 255, 127, 255, 255, 0, 0, 255, 63, 0, 0, 192, 61, 0, 0, 192, 189, 0, 0, 0, 0, 255, 127, 255, 255, 0, 0, 255, 63, 0, 0, 192, 61, 0, 0, 192, 189, 0, 0, 64, 62, 255, 127, 255, 255, 0, 0, 255, 63, 0, 0, 192, 61, 0, 0, 192, 189, 0, 0, 64, 62, 255, 127, 255, 127, 255, 127, 0, 0, 0, 0, 192, 61, 0, 0, 40, 191, 0, 0, 64, 62, 255, 127, 255, 127, 255, 127, 0, 0, 0, 0, 40, 63, 0, 0, 40, 191, 0, 0, 64, 62, 255, 127, 255, 127, 255, 127, 0, 0, 0, 0, 40, 63, 0, 0, 192, 189, 0, 0, 64, 62, 255, 127, 255, 127, 255, 127, 0, 0, 0, 0, 40, 63, 0, 0, 192, 189, 0, 0, 64, 62, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 40, 63, 0, 0, 40, 191, 0, 0, 64, 62, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 40, 63, 0, 0, 40, 191, 0, 0, 0, 0, 255, 255, 255, 127, 255, 127, 0, 0, 0, 0, 40, 63, 0, 0, 192, 189, 0, 0, 0, 0, 255, 255, 255, 127, 255, 127, 0, 0)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_e75dr")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_t2f5g"]
points = PackedVector3Array(0.75, -0.142199, 0.749927, 0.0952555, -0.6563, 0.00198329, 0.0893603, -0.662196, 0.196511, -0.00595236, -0.138527, 0.45826, 0.6563, -0.0952926, 5.39194e-06, 0.747637, -0.6094, 0.747564, 0.00228882, -0.6094, 0.747564, 0.654816, -0.6563, 0.00198329, 0.0938, -0.0953204, 4.23922e-05, -5.55112e-17, -0.142246, 0.749852, 0.755878, -0.614549, 0.45826, -0.00595236, -0.614549, 0.45826, 0.0893603, -0.0908798, 0.196511, 0.755878, -0.138527, 0.45826, 0.660714, -0.662196, 0.196511, 0.660714, -0.0908798, 0.196511)

[sub_resource type="BoxShape3D" id="BoxShape3D_jinn5"]
size = Vector3(0.865, 0.63, 0.3)

[sub_resource type="Curve" id="Curve_brh4j"]
_data = [Vector2(0, 0.736842), 0.0, 0.0, 0, 0, Vector2(0.291262, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.421053), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_3s424"]
curve = SubResource("Curve_brh4j")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_f643r"]
lifetime_randomness = 0.77
particle_flag_align_y = true
particle_flag_rotate_y = true
direction = Vector3(0, 0, 0)
flatness = 0.49
gravity = Vector3(0, -9, 0)
initial_velocity_min = 2.0
initial_velocity_max = 4.0
damping_min = 2.075
damping_max = 2.075
scale_min = 0.5
scale_curve = SubResource("CurveTexture_3s424")
color = Color(1, 1, 0, 1)
hue_variation_max = 0.48

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eofno"]
vertex_color_use_as_albedo = true
emission_enabled = true
emission = Color(1, 0.866667, 0, 1)
emission_energy_multiplier = 5.0

[sub_resource type="BoxMesh" id="BoxMesh_f337x"]
material = SubResource("StandardMaterial3D_eofno")
size = Vector3(0.09, 0.07, 0.02)

[node name="Anvil" type="StaticBody3D" groups=["interagivel"]]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
collision_mask = 0
physics_material_override = SubResource("PhysicsMaterial_onkn2")
script = ExtResource("1_5odmv")
obj_class_maneger = ExtResource("2_7rwsh")

[node name="Object_3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.394201, 0.390071, 1.70506e-08)
mesh = SubResource("ArrayMesh_fsdxx")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.394201, 0.390071, 1.70506e-08)
shape = SubResource("ConvexPolygonShape3D_t2f5g")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0109694, -0.0286447, 0.909936)
collision_layer = 0
input_capture_on_drag = true
priority = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0137403, 0.000376821)
shape = SubResource("BoxShape3D_jinn5")

[node name="SpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.029021, -4.19706e-08, 0.960175)

[node name="GPUParticles3D" type="GPUParticles3D" parent="SpawnPoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0373971, -0.0247755, 0.00754344)
emitting = false
lifetime = 0.8
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_f643r")
draw_pass_1 = SubResource("BoxMesh_f337x")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="SpawnPoint"]
stream = ExtResource("4_4phc8")
max_distance = 2.0

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
